syntax = "proto3";

option csharp_namespace = "NextCart.Api.Cart";

import "CartMessages.proto";

service CartGrain {
  rpc Create (CreateCart2) returns (Cart2);
}